--- a/client/src/components/styles/detail.module.css
+++ b/client/src/components/styles/detail.module.css
@@ -1,48 +1,63 @@
 .detail {
-  background-color: black;
-  margin: auto;
+  flex-direction: column;
+  background-color: rgb(42, 22, 51);
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
-  padding: 25px;
+  padding: 10px;
   font-family: "Avenir", sans-serif;
   color: blanchedalmond;
 }
 
+.but {
+  display: flex;
+  margin-left: 40px;
+  background: #4f4cac;
+  border: 0;
+  border-radius: 0.375rem;
+  color: #fff;
+  cursor: pointer;
+  font-family: Helvetica, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 700;
+  padding: 1rem 1rem;
+}
+
 .img {
   height: 500px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #dbe4ed;
+  border: 1px solid #dbe4ed;
   border-radius: 1rem;
-  width: 50%;
-  margin: auto;
-  display: block;
+  width: 40%;
 }
 
 .title {
+  font-size: 30px;
   color: blanchedalmond;
 }
 
 .genres {
+  font-size: 20px;
   color: blanchedalmond;
 }
 
 .description {
+  text-justify: distribute;
+
   color: blanchedalmond;
 }
 
 .rating {
+  font-size: 20px;
   color: blanchedalmond;
 }
 
 .platforms {
+  font-size: 20px;
   color: blanchedalmond;
 }
 
 .released {
+  font-size: 20px;
   color: blanchedalmond;
 }
 
