--- a/client/src/components/styles/videogames.module.css
+++ b/client/src/components/styles/videogames.module.css
@@ -1,15 +1,25 @@
-.loading {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 50px;
-  color: black;
-}
-
 .container {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(5, 1fr);
+  background-color: rgb(29, 15, 34);
+  display: flex;
+  flex-direction: column;
 }
 
-.videogames {
-  display: flex;
+.containNav {
+  background-color: rgb(37, 19, 44);
+  margin: 5px;
+  padding: 5px;
+}
+
+.containGames {
+  background-color: rgb(148, 115, 160);
+}
+
+.containPagination {
+  background-color: rgb(37, 19, 44);
+}
+
+s.loading {
+  background-color: salmon;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
 }
