--- a/client/src/components/styles/search.module.css
+++ b/client/src/components/styles/search.module.css
@@ -27,3 +27,9 @@
   background: #743bb9;
   color: #fff;
 }
+
+.title {
+  color: #fff;
+  font-size: 40px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
